@@ -608,6 +608,7 @@ bool unit::matches_filter(const config& cfg) const
 	const std::string& race = cfg["race"];
 	const std::string& gender = cfg["gender"];
 	const std::string& canrecruit = cfg["canrecruit"];
+	const std::string& level = cfg["level"];
 
 	if(description.empty() == false && description != this->underlying_description()) {
 		return false;
@@ -689,6 +690,10 @@ bool unit::matches_filter(const config& cfg) const
 
 	if (canrecruit.empty() == false && (canrecruit == "1") != can_recruit())
 		return false;
+
+	if(level.empty() == false && this->type().level() != lexical_cast_default<int>(level,-1)) {
+		return false;
+	}
 
 	//if there are [not] tags below this tag, it means that the filter
 	//should not match if what is in the [not] tag does match
